k8s/prestage/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: library-app
  namespace: prestage

spec:
  replicas: 3

  selector:
    matchLabels:
      app: library-app

  template:
    metadata:
      labels:
        app: library-app

    spec:
      containers:

        - name: library-app

          image: haechanlovelove/library-app:v1

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5000

          resources:

            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"
